Add extended duration option
This counts as an adjustment so notifies users when matching the
existing logic for adjustments being present and who the changes are
effected by.

--- a/app/views/appointment_mailer/adjustment.html.erb
+++ b/app/views/appointment_mailer/adjustment.html.erb
@@ -4,6 +4,12 @@
   </h1>
 <% end %>
 
+<% if @appointment.extended_duration? %>
+  <h1 style="color: #0F19A0 !important;font-family: Calibri, Arial, sans-serif;margin: 15px 0;font-weight: 700;font-size: 20px;line-height: 1.111111111;padding: 15px 0;">
+    The customer has indicated they require an extended duration appointment
+  </h1>
+<% end %>
+
 <% if @appointment.third_party_booking? %>
   <h1 style="color: #0F19A0 !important;font-family: Calibri, Arial, sans-serif;margin: 15px 0;font-weight: 700;font-size: 20px;line-height: 1.111111111;padding: 15px 0;">
     The customer has indicated they are attending an appointment on behalf of an individual
