--- a/app/views/my_appointments/show.html.erb
+++ b/app/views/my_appointments/show.html.erb
@@ -4,7 +4,7 @@
 <h1>My appointments</h1>
 
 <div
-  class="js-calendar-reload-on-events t-calendar"
+  class="js-calendar-reload-on-events t-calendar my-appointments-calendar"
   data-module="my-appointments-calendar"
   data-default-date="<%= Time.zone.now %>"
   data-guider-id="<%= current_user.id %>"
