Track all instances of reschedulings
Prior to this we only ever knew about the very last online rescheduling.
This meant that tracking an appointment through multiple reschedulings
was effectively impossible and would cause appointments to go missing if
they were rescheduled more than once across varying organisations.

--- a/app/views/online_reschedulings/index.html.erb
+++ b/app/views/online_reschedulings/index.html.erb
@@ -57,14 +57,14 @@
   </thead>
   <tbody class="list" data-module="search-highlight">
     <% @results.each do |result| %>
-      <% result = AppointmentSearchResultPresenter.new(result) %>
+      <% result = OnlineReschedulePresenter.new(result) %>
       <tr class="appointment-search-results__row t-result">
-        <td class="appointment-search-results__item"><b class="visible-xs-block">Reference</b><span class="id js-allow-highlighting t-id">#<%= result.id %></span></td>
-        <td class="appointment-search-results__item"><b class="visible-xs-block">Customer</b><span class="js-allow-highlighting t-name"><%= result.name %></span></td>
+        <td class="appointment-search-results__item"><b class="visible-xs-block">Reference</b><span class="id js-allow-highlighting t-id">#<%= result.reference %></span></td>
+        <td class="appointment-search-results__item"><b class="visible-xs-block">Customer</b><span class="js-allow-highlighting t-name"><%= result.customer_name %></span></td>
         <td class="appointment-search-results__item"><b class="visible-xs-block">Guider</b><span class="js-allow-highlighting t-previous-guider-name"><%= result.previous_guider_name %></span> <small>(<%= result.previous_guider_organisation %>)</small></td>
         <td class="appointment-search-results__item t-appointment-date-time"><b class="visible-xs-block">Appointment Date/Time</b><%= result.date %></td>
         <td class="appointment-search-results__item t-rescheduled-date-time"><b class="visible-xs-block">Rescheduled Date/Time</b><%= result.rescheduled_at %></td>
-        <td class="appointment-search-results__item t-processed"><b class="visible-xs-block">Processed</b><%= processed_label(result) %></td>
+        <td class="appointment-search-results__item t-processed"><b class="visible-xs-block">Processed</b><%= processed_label(result.appointment) %></td>
       </tr>
     <% end %>
   </tbody>
