--- a/app/views/online_reschedulings/index.html.erb
+++ b/app/views/online_reschedulings/index.html.erb
@@ -50,9 +50,11 @@
       <th>Reference</th>
       <th>Customer</th>
       <th>Guider</th>
-      <th>Appointment Date/Time</th>
-      <th>Rescheduled Date/Time</th>
+      <th>Original Date/Time</th>
+      <th>Rescheduled At</th>
+      <% unless current_user.tpas? %>
       <th>Processed</th>
+      <% end %>
     </tr>
   </thead>
   <tbody class="list" data-module="search-highlight">
@@ -62,9 +64,11 @@
         <td class="appointment-search-results__item"><b class="visible-xs-block">Reference</b><span class="id js-allow-highlighting t-id">#<%= result.reference %></span></td>
         <td class="appointment-search-results__item"><b class="visible-xs-block">Customer</b><span class="js-allow-highlighting t-name"><%= result.customer_name %></span></td>
         <td class="appointment-search-results__item"><b class="visible-xs-block">Guider</b><span class="js-allow-highlighting t-previous-guider-name"><%= result.previous_guider_name %></span> <small>(<%= result.previous_guider_organisation %>)</small></td>
-        <td class="appointment-search-results__item t-appointment-date-time"><b class="visible-xs-block">Appointment Date/Time</b><%= result.date %></td>
-        <td class="appointment-search-results__item t-rescheduled-date-time"><b class="visible-xs-block">Rescheduled Date/Time</b><%= result.rescheduled_at %></td>
+        <td class="appointment-search-results__item t-appointment-date-time"><b class="visible-xs-block">Original Date/Time</b><%= result.date %></td>
+        <td class="appointment-search-results__item t-rescheduled-date-time"><b class="visible-xs-block">Rescheduled At</b><%= result.rescheduled_at %></td>
+        <% unless current_user.tpas? %>
         <td class="appointment-search-results__item t-processed"><b class="visible-xs-block">Processed</b><%= processed_label(result) %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
