Hide Saturdays for Ops schedules
The schedules calendar should display no weekend days when the current
user belongs to Ops.

--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -89,7 +89,7 @@
   </div>
   <div class="form-group">
     <%= render 'shared/nojs' %>
-    <div id="GuiderSlotPickerCalendar" data-module="guider-slot-picker-calendar" data-events=".slots-data" data-events-common="calendar-common" data-config='{"slotDurationMinutes": 70}'></div>
+    <div id="GuiderSlotPickerCalendar" data-module="guider-slot-picker-calendar" data-events=".slots-data" data-events-common="calendar-common" data-config='{"slotDurationMinutes": 70 }' data-hide-saturday="<%= current_user.tpas? %>"></div>
   </div>
 
   <%= f.hidden_field :slots, class: 'slots-data', value: @slots_as_json %>
