Add a toggle for cancelled appointments
Shows or hides the cancelled appointments in a calendar to aid
visibility when looking at crowded schedules.

--- a/app/views/shared/_calendar_filter.html.erb
+++ b/app/views/shared/_calendar_filter.html.erb
@@ -10,5 +10,6 @@
     )
   %>
   <hr>
+  <label>Hide cancelled appointments <input type="checkbox" class="js-hide-cancelled-toggle"></label><br/>
   <label>Show bookable slots over holidays <input type="checkbox" class="js-booking-slot-toggle"></label>
 </div>
