--- a/app/views/appointments/preview.html.erb
+++ b/app/views/appointments/preview.html.erb
@@ -47,6 +47,7 @@
   <%= f.hidden_field :bsl_video %>
   <%= f.hidden_field :schedule_type %>
   <%= f.hidden_field :referrer %>
+  <%= f.hidden_field :transferring_pension_to %>
   <%= f.hidden_field :nudged %>
   <%= f.hidden_field :attended_digital %>
   <%= f.hidden_field :adjustments %>
