Force full screen width for viewport

--- a/app/assets/stylesheets/helper/_bootstrap_overrides.scss
+++ b/app/assets/stylesheets/helper/_bootstrap_overrides.scss
@@ -1,5 +1,11 @@
 $mark-colour: #faf785;
 
+.container {
+  min-width: 100%;
+  margin-left: 0;
+  margin-right: 0;
+}
+
 .breadcrumb > .active {
   color: $color-black;
 }
