--- a/app/views/appointment_mailer/bsl_customer_exit_poll.html.erb
+++ b/app/views/appointment_mailer/bsl_customer_exit_poll.html.erb
@@ -11,7 +11,7 @@
 <% end %>
 
 <%= p do %>
-  We'd appreciate your feedback on the interpreter service you received. You also have the option of sending video feedback: <a href="https://actiondeafness.org.uk/feedback-form/">actiondeafness.org.uk/feedback-form</a>.
+  We'd appreciate your feedback on the interpreter service you received. You also have the option of sending video feedback: <a href="https://www.pensionwise.gov.uk/bsl-exit-poll">www.pensionwise.gov.uk/bsl-exit-poll</a>.
 <% end %>
 
 <%= p do %>
