Add wait-time notice to appointment details

--- a/app/views/shared/email/_appointment_details.html.erb
+++ b/app/views/shared/email/_appointment_details.html.erb
@@ -60,3 +60,7 @@
     We’re open between 9am and 5pm, Monday to Friday. Closed on bank holidays.
   <% end %>
 <% end %>
+
+<%= p do %>
+  <strong>There’s currently a longer wait for phone appointments than normal.</strong>
+<% end %>
