--- a/app/views/shared/email/_appointment_details.text.erb
+++ b/app/views/shared/email/_appointment_details.text.erb
@@ -31,3 +31,5 @@ To change or cancel your Pension Safeguarding Guidance appointment, call 0800 01
 
 We’re open between 9am and 5pm, Monday to Friday. Closed on bank holidays.
 <% end %>
+
+There’s currently a longer wait for phone appointments than normal.
