Add wait-notice to no show email

--- a/app/views/appointment_mailer/missed.html.erb
+++ b/app/views/appointment_mailer/missed.html.erb
@@ -26,6 +26,10 @@
   <%= p do %>
     You can also have an <a href="https://prd-pwtriage.moneyhelper.org.uk/en/pension-wise-triage/start">online Pension Wise appointment</a> at any time.
   <% end %>
+
+  <%= p do %>
+    <strong>There’s currently a longer wait for phone appointments than normal.</strong>
+  <% end %>
 <% else %>
   <%= p do %>
     To book a new appointment, call 0800 015 4906.
