--- a/app/views/appointment_mailer/missed.text.erb
+++ b/app/views/appointment_mailer/missed.text.erb
@@ -12,6 +12,8 @@ You can https://www.moneyhelper.org.uk/en/pensions-and-retirement/pension-wise/b
 We’re open between 9am and 5pm, Monday to Friday. Closed on bank holidays.
 
 You can also have an https://prd-pwtriage.moneyhelper.org.uk/en/pension-wise-triage/start online Pension Wise appointment at any time.
+
+There’s currently a longer wait for phone appointments than normal.
 <% else %>
 To book a new appointment, call 0800 015 4906.
 
