Rename labelling for consistency

--- a/app/views/appointments/reschedule.html.erb
+++ b/app/views/appointments/reschedule.html.erb
@@ -20,7 +20,7 @@
           <%= f.radio_button :rescheduling_reason, 'client_rescheduled', label: 'Client rescheduled', class: 't-client-rescheduled', data: { target: 'rescheduling_route' } %>
         </div>
         <div class="radio">
-          <%= f.radio_button :rescheduling_reason, 'office_rescheduled', label: 'Pension Wise rescheduled', class: 't-pension-wise-rescheduled' %>
+          <%= f.radio_button :rescheduling_reason, 'office_rescheduled', label: 'Office rescheduled', class: 't-pension-wise-rescheduled' %>
         </div>
       </div>
     </div>
