Pin the calendar when fullscreen
This keeps the navigational elements in view when the calendar is
expanded horizontally.

--- a/app/assets/stylesheets/components/_calendars.scss
+++ b/app/assets/stylesheets/components/_calendars.scss
@@ -130,6 +130,11 @@ $guider-row-height: 120px;
 
 .container--fullscreen {
   width: 250%;
+
+  .fc-right {
+    position: fixed;
+    right: 15px;
+  }
 }
 
 .calendar-row-highlighter {
